force-app/main/default/objects/CT_scan__c/CT_scan__c.object-meta.xml
<CustomObject>
    <label>КТ</label>
    <nameField>
        <displayFormat>KT-{000000}</displayFormat>
        <label>КТ код</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>КТ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>