force-app/main/default/objects/CT_scan__c/fields/Datetime_CT__c.field-meta.xml
<CustomField>
    <fullName>Datetime_CT__c</fullName>
    <label>Дата и время КТ</label>
    <type>DateTime</type>
</CustomField>