force-app/main/default/objects/CT_scan__c/fields/Is_Ready_Notice_Date_CT_Scan__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready_Notice_Date_CT_Scan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Заявка на КТ готова?</label>
    <type>Checkbox</type>
</CustomField>