force-app/main/default/objects/CT_scan__c/fields/Is_Request_Ready__c.field-meta.xml
<CustomField>
    <fullName>Is_Request_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Заявка готова?</label>
    <type>Checkbox</type>
</CustomField>