force-app/main/default/objects/CT_scan__c/fields/Pneumonia__c.field-meta.xml
<CustomField>
    <fullName>Pneumonia__c</fullName>
    <label>Пневмония</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Да</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>Нет</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>