force-app/main/default/objects/CT_scan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Datetime_CT__c</columns>
    <columns>Pneumonia__c</columns>
    <columns>Is_Ready_Notice_Date_CT_Scan__c</columns>
    <columns>Sick_leave__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>